# wizardry

./: README.md  build.gradle  gradle.properties  settings.gradle
native-libs/: CMakeLists.txt  build.gradle
native-libs/src/main/cpp/: main.cpp
neoforge/: build.gradle
neoforge/src/main/resources/assets/wizardry/: sounds.json
src/main/java/top/begonia/wizardry/: Wizardry.java
src/main/resources/: wizardry.mixins.json
src/main/resources/assets/wizardry/blockstates/: bookshelf.json  crystal_block.json  crystal_ore.json  gilded_wood.json  lectern.json  runestone.json  runestone_pedestal.json
src/main/resources/assets/wizardry/custom/: books0.json  books1.json  books10.json  books2.json  books3.json  books4.json  books6.json  books7.json  books8.json
src/main/resources/assets/wizardry/equipment/: battlemage_armour.json  battlemage_armour_earth.json  battlemage_armour_fire.json  battlemage_armour_ice.json  battlemage_armour_lightning.json  battlemage_armour_necromancy.json  battlemage_armour_sorcery.json  sage_armour.json  sage_armour_healing.json  sage_armour_ice.json  sage_armour_lightning.json  sage_armour_sorcery.json  warlock_armour.json  warlock_armour_earth.json  warlock_armour_healing.json  warlock_armour_ice.json  warlock_armour_lightning.json  warlock_armour_sorcery.json  wizard_armour.json  wizard_armour_festive.json  wizard_armour_fire.json  wizard_armour_healing.json  wizard_armour_lightning.json  wizard_armour_necromancy.json
src/main/resources/assets/wizardry/items/: advanced_earth_wand.json  advanced_fire_wand.json  advanced_healing_wand.json  (+186 more)
(+747 files in other folders)
